tests/snapshots/emit__tests__interpret__2Darray-order-of-exec.xi.snap
---
source: tests/emit.rs
assertion_line: 41
expression: lir_stdout
---
Index: 0
Index: 0
0
Index: 0
Index: 1
1
Index: 0
Index: 2
2
Index: 0
Index: 3
3
Index: 1
Index: 0
4
Index: 1
Index: 1
5
Index: 1
Index: 2
6
Index: 1
Index: 3
7
Index: 2
Index: 0
8
Index: 2
Index: 1
9
Index: 2
Index: 2
10
Index: 2
Index: 3
11
Index: 3
Index: 0
12
Index: 3
Index: 1
13
Index: 3
Index: 2
14
Index: 3
Index: 3
15
Index: 4
Index: 0
16
Index: 4
Index: 1
17
Index: 4
Index: 2
18
Index: 4
Index: 3
19

