tests/snapshots/emit__tests__interpret__array_decl_se.xi.snap
---
source: tests/emit.rs
assertion_line: 41
expression: lir_stdout
---
Index: 0
Index: 1
Index: 0
3
4
4
4
4

