tests/snapshots/emit__tests__interpret__assign09.xi.snap
---
source: tests/emit.rs
assertion_line: 41
expression: lir_stdout
---
Index: 3
Index: 2
Index: 2
Index: 1
0
1
2
3
1
2
47
4
2
3
4
5
3
4
5
6
4
5
6
7

