tests/snapshots/emit__tests__interpret__assign10.xi.snap
---
source: tests/emit.rs
assertion_line: 41
expression: lir_stdout
---
Index: 4 2
Index: 4 2
0
1
2
3
1
2
3
4
2
3
4
5
3
4
5
6
4
5
47
7

