tests/snapshots/emit__tests__interpret__localdecl13.xi.snap
---
source: tests/emit.rs
assertion_line: 41
expression: lir_stdout
---
Index: 0
Index: 0
Index: 0
2
3
4
4
2
3

