tests/snapshots/emit__tests__interpret__localdecl14.xi.snap
---
source: tests/emit.rs
assertion_line: 41
expression: lir_stdout
---
Index: 3
Index: 2
Index: 2
Index: 1
Index: 1
Index: 0
1
2
2
2
4
5
5

