tests/snapshots/emit__tests__interpret__primes.xi.snap
---
source: tests/emit.rs
assertion_line: 41
expression: lir_stdout
---
Largest prime less than 100 is 97
