tests/snapshots/emit__tests__interpret__procedurecall02.xi.snap
---
source: tests/emit.rs
assertion_line: 41
expression: lir_stdout
---
p() called: 47
p() called: 46
p() called: 45
p() called: 44
p() called: 43
p() called: 42
p() called: 41
p() called: 40
p() called: 39
p() called: 38
p() called: 37
p() called: 36
p() called: 35
p() called: 34
p() called: 33
p() called: 32
p() called: 31
p() called: 30
p() called: 29
p() called: 28
p() called: 27
p() called: 26
p() called: 25
p() called: 24
p() called: 23
p() called: 22
p() called: 21
p() called: 20
p() called: 19
p() called: 18
p() called: 17
p() called: 16
p() called: 15
p() called: 14
p() called: 13
p() called: 12
p() called: 11
p() called: 10
p() called: 9
p() called: 8
p() called: 7
p() called: 6
p() called: 5
p() called: 4
p() called: 3
p() called: 2
p() called: 1
p() called: 0
p() post-call: 1
p() post-call: 2
p() post-call: 3
p() post-call: 4
p() post-call: 5
p() post-call: 6
p() post-call: 7
p() post-call: 8
p() post-call: 9
p() post-call: 10
p() post-call: 11
p() post-call: 12
p() post-call: 13
p() post-call: 14
p() post-call: 15
p() post-call: 16
p() post-call: 17
p() post-call: 18
p() post-call: 19
p() post-call: 20
p() post-call: 21
p() post-call: 22
p() post-call: 23
p() post-call: 24
p() post-call: 25
p() post-call: 26
p() post-call: 27
p() post-call: 28
p() post-call: 29
p() post-call: 30
p() post-call: 31
p() post-call: 32
p() post-call: 33
p() post-call: 34
p() post-call: 35
p() post-call: 36
p() post-call: 37
p() post-call: 38
p() post-call: 39
p() post-call: 40
p() post-call: 41
p() post-call: 42
p() post-call: 43
p() post-call: 44
p() post-call: 45
p() post-call: 46
p() post-call: 47

