tests/snapshots/emit__tests__interpret__while1.xi.snap
---
source: tests/emit.rs
assertion_line: 41
expression: lir_stdout
---
x = 0
x = 1
x = 2
x = 3
x = 4
x = 5
x = 6
x = 7
x = 8
x = 9

